fixed overflow issues for mobile

--- a/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
@@ -1,9 +1,12 @@
 .App{
   background-color: purple;
+  width: 100vw;
+  max-width:100vw;
   height: 100vh;
   max-height: 100vh;
   margin: 0;
   padding: 0;
+  //overflow-y: hidden;
 }
 .btn {
   border-radius: 10%;
